--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           command: pip install -r requirements.txt
       - run:
           name: Run tests
-          command: pytest Testing/Test_suite.py
+          command: pytest Test_suite.py
 
 workflows:
   version: 2
