--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,11 +11,10 @@ jobs:
           command: pip install -r requirements.txt
       - run:
           name: Run tests
-          command: pytest Test_suite.py
+          command: python -m unittest discover -s tests -p "test_*.py"
 
 workflows:
   version: 2
   build:
     jobs:
       - build
-
